--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,10 @@ jobs:
           go-version: '^1.16' # The Go version to download (if necessary) and use.
       - name: Crawl Countries Data
         run: go run ./crawler/crawler.go
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: generate country_map.go
+
   test:
     runs-on: ubuntu-latest
 
